INCLUDE(FindThreads)

FILE(
  GLOB SOURCES
  LIST_DIRECTORIES false
  RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
  *.cc
)

ADD_LIBRARY(dbc++ SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(
  dbc++
  ${CMAKE_DL_LIBS}
  ${Boost_SYSTEM_LIBRARY}
  ${Boost_FILESYSTEM_LIBRARY}
  ${CONAN_LIBS_CPPURI}
  ${CMAKE_THREAD_LIBS_INIT}
  ${CONAN_LIBS_SPDLOG}
  ${CONAN_LIBS_FMT}
)

ADD_SUBDIRECTORY(psql)
ADD_SUBDIRECTORY(sqlite)

# Ensure the rpath / runpath has the output directory for the modules
IF(UNIX)
  GET_TARGET_PROPERTY(OUTPUT_DIRS dbc++ LIBRARY_OUTPUT_DIRECTORY)

  TARGET_LINK_DIRECTORIES(
    dbc++ PUBLIC "${OUTPUT_DIRS}"
    "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}"
  )
ENDIF()
