
SET( DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" )
STRING( REGEX REPLACE ".*/([^/]+)$" "\\1" DIRECTORY "${DIRECTORY}" )
STRING( TOUPPER "${DIRECTORY}" UPPER )

IF ( NOT "${${UPPER}_ENABLED}" )
  MESSAGE( STATUS "${UPPER} not enabled: ${${UPPER}_ENABLED}" )
  RETURN( )
ENDIF( )

FILE( GLOB_RECURSE SOURCES
  LIST_DIRECTORIES false
  RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}"
  *.cc *.cpp )

ADD_LIBRARY( "${DIRECTORY}" SHARED "${SOURCES}" )

TARGET_LINK_LIBRARIES( "${DIRECTORY}" dbc++ ${FreeTDS_LIBS} )
